<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zlac8015d_driver2_cpp</name>
  <version>1.0.0</version>
  <description>ROS 2 package in CPP to control 2 DC motors. 
  There is a code to test the driver which does not use ROS 2.</description>
  <maintainer email="jossue.espinoza@octopy.com">Jossue Espinoza</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>


  <!-- Test this????????? -->
  <exec_depend>libmodbus-dev</exec_depend>
  <build_depend>libmodbus-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
